--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,9 +2,9 @@
 <nav class="navbar navbar-expand-lg color">
     <div class="container">
       <a class="navbar-brand" href="#">
-     
+
         <img src="../../../assets/image/chef.jpg" alt="" width="70" height="70" class="d-inline-block align-text-top">
-    
+
         </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -18,9 +18,9 @@
             <a class="nav-link" href="#">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">aaaaa</a>
           </li>
-          
+
         </ul>
       </div>
     </div>
