--- a/src/app/components/admin1/admin1.component.html
+++ b/src/app/components/admin1/admin1.component.html
@@ -82,6 +82,10 @@
               </div>
               <div class="card-body px-0 pb-2">
                 <div class="table-responsive">
+                    <a class="nav-link" routerLink="/ajouterM">
+                        <i class="material-icons" style="color: blue;">add_circle</i><span style="color: blue;">Ajouter Medecin</span>
+                        
+                      </a>
                   <table class="table align-items-center mb-0">
                     <thead>
                       <tr>
@@ -95,7 +99,9 @@
                       <tbody>
                         <tr *ngFor="let medecin of medecins">
                           <td>{{medecin.nom}}</td>
-                          <td>{{medecin.Prenom}}</td>
+                          <td>{{medecin.prenom}}</td>
+                         <td><button class="btn mt-3" (click)="Supprimer(medecin.id)">supprimer</button></td> 
+                         <td><button class="btn mt-3" (click)="consulter(medecin.id)">consulter</button></td>
                           
                         </tr>
                        
@@ -107,9 +113,7 @@
           </div>
 
 
-          <ul>
-            <li *ngFor="let medecin of medecins">{{medecin.nom}}</li>
-        </ul>
+          
           
         </div>
 
@@ -143,6 +147,11 @@
               </div>
               <div class="card-body px-0 pb-2">
                 <div class="table-responsive">
+
+                  <a class="nav-link" routerLink="/ajouterP">
+                    <i class="material-icons" style="color: blue;">add_circle</i><span style="color: blue;">Ajouter Patient</span>
+                    
+                  </a>
                   <table class="table align-items-center mb-0">
                     <thead>
                       <tr>
@@ -155,11 +164,7 @@
                     </thead>
                     <tbody>
                      
-                      <tr *ngFor="let medecin of medecins">
-                        <td>{{medecin.nom}}</td>
-                        <td>{{medecin.Prenom}}</td>
-                        
-                      </tr>
+                      
                     </tbody>
                   </table>
                 </div>
@@ -205,6 +210,8 @@
               </div>
               <div class="card-body px-0 pb-2">
                 <div class="table-responsive">
+
+                  
                   <table class="table align-items-center mb-0">
                     <thead>
                       <tr>
